# distributed-process-demos

./: .gitignore  LICENSE  README.md  distributed-process-demos.cabal  stack.yaml
src/Common/: PrimeFactors.hs
src/MapReduce/: CountWords.hs  KMeans.hs  MapReduce.hs  MonoDistrMapReduce.hs  PolyDistrMapReduce.hs  SimpleLocalnet.hs  test.js
src/MasterSlave/: MasterSlave.hs  SimpleLocalnet.hs
text/: Somme.txt
