name:                distributed-process-demos
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/stephenoken/distributed-process-demos#readme
license:             BSD3
license-file:        LICENSE
author:              Stephen O'Kennedy
maintainer:          stphenoken@gmail.com
copyright:           Copyright: (c) 2016 Stephen O'Kennedy
category:            Education
build-type:          Simple
cabal-version:       >=1.10

executable distributed-process-masterslave
  main-is:             SimpleLocalnet.hs
  hs-source-dirs:      src/MasterSlave, src/Common
  other-modules:       MasterSlave
                       PrimeFactors
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       distributed-process,
                       distributed-process-simplelocalnet
  extensions:          BangPatterns, CPP, TemplateHaskell

executable distributed-process-simplelocalnet-mapreduce
  main-is:             SimpleLocalnet.hs
  other-modules:       CountWords
                       KMeans
                       MapReduce
                       MonoDistrMapReduce
                       PolyDistrMapReduce
  hs-source-dirs:      src/MapReduce
  build-depends:       base >=4.7 && <5,
                       distributed-process,
                       distributed-static,
                       containers,
                       bytestring,
                       binary,
                       array,
                       random
  extensions:          BangPatterns
                       CPP
                       KindSignatures
                       ScopedTypeVariables
                       TemplateHaskell
  ghc-options:         -Wall -rtsopts -with-rtsopts=-K64M
